# gtkd-utils

./: meson.build
src/: gtkutils.d
